plugins {
	id 'org.springframework.boot' version '2.6.6'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id 'jacoco'
	id "org.sonarqube" version "3.3"
	id "org.owasp.dependencycheck" version "7.0.4.1"
}

sonarqube {
	properties {
		property "sonar.projectKey", "JCASTANO_ingsw3"
		property "sonar.organization", "jcastano"
		property "sonar.host.url", "https://sonarcloud.io"
	}
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation ('org.springframework.boot:spring-boot-starter-web') {
		exclude module: 'spring-boot-starter-tomcat'
	}
	implementation 'org.springframework.boot:spring-boot-starter-undertow'

	implementation 'org.springframework.retry:spring-retry:1.3.3'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	//implementation 'mysql:mysql-connector-java:8.0.28'
	implementation 'com.h2database:h2:2.1.210'

	testImplementation 'com.h2database:h2:2.1.210'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	compileOnly 'org.projectlombok:lombok:1.18.20'
	annotationProcessor 'org.projectlombok:lombok:1.18.20'

	implementation 'io.jsonwebtoken:jjwt:0.7.0'
	implementation 'com.auth0:java-jwt:3.19.1'
	implementation 'commons-codec:commons-codec:1.15'

}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}

jacocoTestReport {
	reports {
		xml.enabled true
		html.enabled true
	}
	additionalSourceDirs files("aplicacion/src/main/java")
	additionalClassDirs files("aplicacion/build/classes/java/main")
}
